--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -1,15 +1,57 @@
-body {
+* {
   margin: 0;
-  font-family: 'Roboto', 'Segoe UI', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-    font-size: 18px;
-    line-height: 1.8em;
+  padding: 0;
+}
+
+body {
+  font-family: "Roboto", "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 18px;
+  line-height: 1.8em;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-left: 200px;
+  margin-right: 200px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+h1 {
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+h2 {
+  margin-top: 1.2em;
+  margin-bottom: 0.2em;
+}
+
+@media only screen and (max-width: 1440px) {
+  body {
+    margin-left: 160px;
+    margin-right: 160px;
+  }  
+}
+
+@media only screen and (max-width: 1280px) {
+  body {
+    margin-left: 120px;
+    margin-right: 120px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    margin-left: 64px;
+    margin-right: 64px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
 }
