--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -36,17 +36,41 @@ a:hover {
   margin-right: 200px;
 }
 
+.header-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  height: 120px;
+  min-width: 100vw;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 24px 140px 0px 140px;
+  box-shadow: 0px 2px 10px #00000029;
+}
+
+.menu-category {
+  margin-left: 64px;
+}
 @media only screen and (max-width: 1440px) {
   .App {
     margin-left: 160px;
     margin-right: 160px;
   }
+  .header-menu {
+    padding: 24px 120px 12px 120px;
+  }
 }
 
 @media only screen and (max-width: 1280px) {
   .App {
-    margin-left: 120px;
-    margin-right: 120px;
+    margin-left: 112px;
+    margin-right: 112px;
+  }
+  .header-menu {
+    padding: 24px 112px 12px 112px;
+  }
+  .menu-category {
+    margin-left: 40px;
   }
 }
 
