--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -47,7 +47,7 @@ a:hover {
   justify-content: space-between;
   align-items: flex-end;
   height: 120px;
-  min-width: 100vw;
+  max-width: 100vw;
   width: 100%;
   box-sizing: border-box;
   padding: 24px 140px 0px 140px;
@@ -57,6 +57,16 @@ a:hover {
 .menu-category {
   margin-left: 64px;
 }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  text-align: left;
+  margin-top: 80px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 @media only screen and (max-width: 1440px) {
   .App {
     margin-left: 160px;
