Footer for mobile

--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -111,7 +111,8 @@ a:hover {
     display: none;
   }
   .footer {
-    display: none;
+    justify-content: flex-start;
+    flex-wrap: wrap-reverse;
   }
 }
 
