--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -8,6 +8,7 @@ html {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100vw;
+  cursor: default;
 }
 
 body {
@@ -31,6 +32,7 @@ h1 {
 
 h2 {
   margin-bottom: 0.2em;
+  line-height: 1.4em;
 }
 
 h3 {
