--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -57,7 +57,7 @@ a:hover {
   max-width: 100vw;
   width: 100%;
   box-sizing: border-box;
-  padding: 24px 140px 0px 140px;
+  padding: 24px 140px 0px;
   box-shadow: 0px 2px 10px #00000029;
 }
 
@@ -80,7 +80,7 @@ a:hover {
     margin-right: 160px;
   }
   .header-menu {
-    padding: 24px 120px 12px 120px;
+    padding: 24px 120px 12px;
   }
 }
 
@@ -90,7 +90,7 @@ a:hover {
     margin-right: 112px;
   }
   .header-menu {
-    padding: 24px 112px 12px 112px;
+    padding: 24px 112px 12px;
   }
   .menu-category {
     margin-left: 40px;
