--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -57,8 +57,8 @@ a:hover {
   max-width: 100vw;
   width: 100%;
   box-sizing: border-box;
-  padding: 24px 140px 0px;
-  box-shadow: 0px 2px 10px #00000029;
+  padding: 24px 140px 0;
+  box-shadow: 0 2px 10px #00000029;
 }
 
 .menu-category {
